# Transcriber

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HF_TOKEN.example.txt  Makefile  README.md  SECURITY.md  alignment_fallback_sample.m4a  live_translate.bat  live_translate_quality.bat  merge_transcripts.py  pyproject.toml  start_recordings_watcher.bat  stop_recordings_watcher.bat  transcribe.bat  transcriber_glossary.example.txt  watch_recordings.bat
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/decisions/: ADR-001-agentic-legibility-and-ci.md  ADR-002-watcher-file-movement-policy.md  ADR-003-live-whisperlivekit-system-audio-captions.md  ADR-004-file-post-translation-english-output.md
tests/: test_helpers.py  test_live_audio.py  test_live_cli.py  test_live_eval.py  test_live_window.py  test_live_wlk_messages.py  test_translation.py
tests/__pycache__/: test_helpers.cpython-313-pytest-8.3.5.pyc.24204
tools/: check_release_archive.py  evaluate_live_transcript.py  export_clean.py
transcriber/: __init__.py  __main__.py  errors.py  io.py  live.py  live_audio.py  live_window.py  live_wlk.py  locks.py  preflight.py  status.py  translation.py
transcriber/__pycache__/: __init__.cpython-313.pyc.2791711706688  __main__.cpython-310.pyc.1865483825712  __main__.cpython-310.pyc.1897275894992  __main__.cpython-310.pyc.2240547664592  __main__.cpython-310.pyc.2251580125744  __main__.cpython-310.pyc.2698170603984  __main__.cpython-313.pyc.2791711706976
transcriber/backends/: __init__.py  protocols.py
