[project]
name = "transcriber-local"
version = "0.1.0"
description = "Local WhisperX transcription launcher"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "sentencepiece",
    "sacremoses",
]

[project.scripts]
transcriber = "transcriber.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=8.4",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["transcriber", "tests", "merge_transcripts.py"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

[tool.setuptools]
packages = ["transcriber"]
py-modules = ["merge_transcripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

