[project]
name = "transcriber-local"
version = "0.1.0"
description = "Local WhisperX transcription launcher"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40",
    "sentencepiece",
    "sacremoses",
]

[project.optional-dependencies]
live = [
    "whisperlivekit[translation]>=0.2.20.post1; python_version >= '3.11'",
    "pyaudiowpatch>=0.2.12.8; platform_system == 'Windows' and python_version >= '3.11'",
    "websockets>=15",
    "numpy>=1.26",
    "scipy>=1.11",
    "python-multipart>=0.0.20",
]

[project.scripts]
transcriber = "transcriber.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pre-commit>=4.6.0",
    "pytest>=8.4",
    "pytest-cov>=7.1.0",
    "ruff>=0.14",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=transcriber --cov=merge_transcripts --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["transcriber", "merge_transcripts"]

[tool.coverage.report]
fail_under = 34
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["transcriber", "tests", "merge_transcripts.py"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

[tool.setuptools]
packages = ["transcriber"]
py-modules = ["merge_transcripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
